Bug #4462 | libedit compile failure | ||
---|---|---|---|
Submitted: | 8 Jul 2004 14:12 | Modified: | 24 Aug 2004 19:24 |
Reporter: | Lenz Grimmer | Email Updates: | |
Status: | Closed | Impact on me: | |
Category: | MySQL Server: Compiling | Severity: | S2 (Serious) |
Version: | 4.1 | OS: | FreeBSD (FreeBSD 4,7) |
Assigned to: | Victor Vagin | CPU Architecture: | Any |
[8 Jul 2004 14:12]
Lenz Grimmer
[24 Aug 2004 17:20]
Victor Vagin
bk commit into 4.1 tree (vva:1.1964) ChangeSet 1.1964 04/08/24 20:41:41 vva@eagle.mysql.r18.ru +35 -0 upgrade to libedit-2.6.7 (fixed Bug #4462 libedit compile failure)
[24 Aug 2004 17:52]
Sergey Kostyliov
Sorry, but you will resurrect #4696 by the change proposed. It's due to the fact that the libedit-2.6.7 is broken by itself (please see #4696 for further details.).
[24 Aug 2004 18:00]
Sergey Kostyliov
Forgot to add. I am speaking about cmd-line-utils/libedit/history.c:history_save() - max_size = (len + 1023) & ~1023; ... + max_size = (len + 1023) & 1023; part here.
[24 Aug 2004 18:08]
Sergey Kostyliov
http://lists.mysql.com/internals/16261
[24 Aug 2004 18:54]
Victor Vagin
Thank you you are right correction patch bk commit - 4.1 tree (vva:1.1968) BUG#4696 ChangeSet 1.1968 04/08/25 00:26:53 vva@eagle.mysql.r18.ru +1 -0 resurrect fix for Bug #4696 segfault in cmd-line-utils/libedit/history.c:history_save() (bundled libedit)
[24 Aug 2004 19:24]
Victor Vagin
The fix will be in the mysql-4.1.4