upgrade to libedit-2.6.7 (fixed Bug #4462 libedit compile failure)